добавлен тег <a> со ссылкой на фб, добавлена фотка, добавлены нумерованный и ненумерованный списки

--- a/index.html
+++ b/index.html
@@ -17,7 +17,24 @@
             <p>Design education/job : 2013–2015 — student at the british higher school of art & design (moscow) / graphic design basic course.  
             2015–present — tutor at the british higher school of art & design (moscow) / graphic design basic course.</p>
             <p>Geography : lives in moscow, russia. works globally.</p>
-            <p>Contact me : <a href="http://kirillartemov.com">kirillartemov.com</a>   |    +7 903 292 31 31   |   design@kirillartemov.com</p></h5>
+            <p>Contact me : <a target="blank" href="http://kirillartemov.com">kirillartemov.com</a>   |    +7 903 292 31 31   |   design@kirillartemov.com  |  <a target="blank" href="https://www.facebook.com/kirill.artemov">fb page</a></p></h5>
+            <img width="300" src="https://scontent-arn2-1.cdninstagram.com/vp/7583e6063452d15b0765e6116d8da5d1/5B57CEE6/t51.2885-15/e35/28152132_167726154034558_6580304254441881600_n.jpg">
+            <br>
+            <br>
+            <br>
+            <ul>
+                <li>помидоры</li>
+                <li>огурцы</li>
+                <li>картоха</li>
+                <li>гречка</li>
+            </ul>
+            <ol>
+                <li>хлеб</li>
+                <li>молоко</li>
+                <li>рыба</li>
+                <li>сыр</li>
+            </ol>
+
    </body>
 
 </html>
