добавил таблицу с любимыми фильмами, добавил форму для логина + Рецепт Карбонары

--- a/index.html
+++ b/index.html
@@ -34,6 +34,62 @@
                 <li>рыба</li>
                 <li>сыр</li>
             </ol>
+            <br>
+            <br>
+            <br>
+            <table border='1' cellpadding='10'>
+                <tr>
+                    <td>Homeland</td>
+                    <td>Лесли Линка Глаттер</td>
+                    <td>2011</td>
+                </tr>
+                <tr>
+                    <td>Breaking Bad</td>
+                    <td>Винс Гиллиган</td>
+                    <td>2008</td>
+                </tr>
+                <tr>
+                    <td>Операция Ы и другие приключения Шурика</td>
+                    <td>Леонид Гайдай</td>
+                    <td>1965</td>
+                </tr>
+            </table>
+            <br>
+            <br>
+            <br>
+            <label>Логин</label>
+            <input type="text">
+            <br>
+            <label>Пароль</label>
+            <input type="password">
+            <br>
+            <label>Имя и фамилия</label>
+            <input type="text">
+            <br>
+            <label>Ник</label>
+            <input type="text">
+            <br>
+            <input type="checkbox">
+            <label>Я согласен с правилами сайта</label>
+            <br>
+            <button>Залогиниться</button>
+            <input type="button" value='Залогиниться'>
+            <br>
+            <br>
+            <br>
+            <form>
+                    <h1>Карбонара</h1>
+                    <input type="text" placeholder="Спагетти" name="text"><br>
+                    <input type="text" placeholder="Бекон" name="text"><br>
+                    <input type="text" placeholder="Сливки" name="text"><br>
+                    <input type="text" placeholder="Желтки" name="text"><br>
+                    <input type="text" placeholder="Сыр" name="text"><br>
+                    <input type="checkbox">
+                    <label>Солить?</label><br>
+                    <button type="submit">Приготовить!</button>
+                 </form>
+
+
 
    </body>
 
