добавил style.css, выполнил задания 7 и 8: добавил блоки с текстом, прописал стили блоков

--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
       <meta charset="utf-8">
 
       <title>О себе</title>
+      <link rel="stylesheet" href="style.css">
 
    </head>
 
-   <body>
+   <body class="body">
          <h1>Kirill Artemov</h1>
          <h2>Brand design | Visual identity</h2>
          <h5><p>Started career in the field of graphic design in 2012 at the age of 30</p>
@@ -88,8 +89,17 @@
                     <label>Солить?</label><br>
                     <button type="submit">Приготовить!</button>
                  </form>
-
-
+                 <br>
+                 <br>
+                 <br>
+        <div class="first">
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean ut venenatis metus. Maecenas et mattis magna. Maecenas ut sollicitudin risus. </p>
+            <p>Aenean hendrerit mi non lacinia vulputate. Sed sed leo neque. Maecenas quis consequat turpis, malesuada ullamcorper massa. Ut consequat elit orci, nec euismod risus pellentesque non. Nam velit orci, mollis eget metus eu, elementum tempor risus. Fusce at sapien vitae diam sollicitudin venenatis. Phasellus ornare dolor dolor. Pellentesque in rhoncus arcu. Morbi pellentesque pellentesque felis, nec dictum augue lobortis eget.</p>
+        </div>
+        <div class="second">
+            <p>Aliquam tempor ultrices ligula, eu aliquam mi mattis non. Donec placerat libero quis risus vestibulum, in lacinia arcu porttitor. Aenean gravida vestibulum diam non egestas. Donec ac elementum justo.</p>
+            <p>Nam id dignissim mauris. Proin mattis tellus diam. Maecenas eu justo quis nisl posuere tristique. Donec mattis dapibus felis, euismod mollis tortor efficitur ac. Phasellus eu nunc blandit, aliquet nibh in, malesuada ex.</p>
+        </div>
 
    </body>
 
